# googletest-cmake-c

./: CMakeLists.txt  main.c
matlib/: CMakeLists.txt  mat.c  mat.h
test/: CMakeLists.txt  test_main.cpp
